# gaia

./: .build.sh  .clog.yaml  .codecov.yml  .dockerignore  .env.example  .gitattributes  .gitignore  .gitpod.yml  .golangci.yml  .goreleaser.yml  .markdownlint.yaml  .mergify.yml  .mockery.yaml  404.html  CHANGELOG.md  CHANGELOG_PENDING.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DOCKER_README.md  Dockerfile  LICENSE  Makefile  README.md  RELEASE_NOTES.md  RELEASE_PROCESS.md  RELEASING.md  SECURITY.md  STATE-COMPATIBILITY.md  Starporty  UPGRADING.md  buf.work.yaml  buf.yaml  cp_post_upgrade  cp_pre_upgrade  cp_pre_upgrade.json  debug_container.dot  denom.json  docker-compose.yml  (+58 more)
.changelog/: config.toml  epilogue.md
.circleci/: config.yml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  codecov.yml  dependabot.yml  stale.yml  staly.yml
abi/: ERC20.json  IBCERC20.json  ICS20Transfer.json  ICS26Router.json  SP1ICS07Tendermint.json
ante/: README.md  ante.go  ante_feemarket_feeabs.go  ante_test.go  errors.go  fee.go  fee_test.go  fee_utils.go  fee_utils_test.go  gov_ante.go  gov_ante_test.go  gov_expedited_ante.go  gov_expedited_ante_test.go  gov_vote_ante.go  gov_vote_ante_test.go  legacy_ics_ante.go  legacy_ics_ante_test.go  min_commission.go  notes.txt  provider_ante.go  provider_ante_test.go  sigverify.go  tx_fee.go  wasm_gov_vote.go  wasm_gov_vote_test.go
app/: abci.go  addr_prefixes.go  ante_handler.go  app.go  app_helpers.go  app_test.go  codec.go  config.go  const.go  encoding.go  export.go  gas_test.go  genesis.go  genesis_account.go  genesis_account_fuzz_test.go  genesis_account_test.go  lanes.go  middleware.go  migrate.go  modules.go  multisend_test.go  otel.go  params.go  post.go  precompiles.go  prop29.go  prop29_test.go  prop_29.go  pubkey_replacement.go  sim_bench_test.go  sim_test.go  state.go  test_access.go  test_helpers.go  test_util.go  types.go  utils.go  utils_test.go
ci/: .gitignore  README.md  bootstrap_gaia.sh  build-chains.sh  build-ibc-chains.sh  build-simd.sh  chain_a.Dockerfile  chain_b.Dockerfile  docker-compose.yml  e2e.sh  gaia.Dockerfile  hermes.Dockerfile  relayer.Dockerfile  run-gaiad.sh  simd.Dockerfile  simple_config.toml
ci/no-std-check/: Cargo.toml  Makefile  README.md
ci/no-std-check/src/: lib.rs
cli_test/: README.md  cli_test.go  test_helpers.go
client/: export.go  import.go  keys.go
cmd/: genwasm.go
contracts/: ICS20Transfer.sol  ICS26Router.sol
contrib/: Dockerfile.test  denom.json  gitian-build.sh  localnet-blocks-test.sh  single-node.sh  statesync-rs-testnet.bash  statesync.bash  statesync.sh  upload-contract.sh
deployment-scripts/: README.md  ansible.cfg  deploy-fullnode.yml  deploy-validator.yml  gravity-full-v005.yml  inventory  validator-prep.yml
docs/: DOCS_README.md  README-website.md  README.md  build.sh  code-guidelines.md  delegator-guide-cli.md  deploy-testnet.md  deploy.sh  docusaurus.config.js  gaiacli.md  genesis-state.md  genesis.md  gtm-interchain.md  hd-wallets.md  installation.md  interchain-security.md  interchain-staking.md  join-mainnet.md  join-testnet.md  ledger-lunie-guide.md  ledger.md  live-upgrade-tutorial.md  package-lock.json  package.json  reproducible-builds.md  service-providers.md  sidebars.js  tailwind.config.js  upgrade-demo.md  upgrade-node.md  versions  versions.json  webpack.config.js
encoding/: config.go  config_test.go
evm/: access_list.go  access_list_tx.go  codec.go  dynamic_fee_tx.go  evm.pb.go  legacy_tx.go  logs.go  msg.go  msg_test.go  tracer.go  tx.pb.go  tx_args.go  tx_data.go  utils.go
genesis/: althea-launch-genesis.json  althea-testnet1-genesis.json
governance/: CODE_OF_CONDUCT.md
integration_tests/: Cargo.toml
integration_tests/althea_proto/: Cargo.toml
integration_tests/althea_proto/src/: lib.rs
integration_tests/althea_proto/src/prost/: lockup.v1.rs  microtx.v1.rs
integration_tests/test_runner/: Cargo.toml
integration_tests/test_runner/src/: bootstrapping.rs  lib.rs  type_urls.rs  utils.rs
integration_tests/test_runner/src/tests/: lockup.rs  microtx_fees.rs  mod.rs
lcd_test/: helpers.go  helpers_test.go  lcd_test.go
main/: architecture.html  architecture.html.html  delegators.html  delegators.html.html  getting-started.html  getting-started.html.html  governance.html  governance.html.html  hub-tutorials.html  hub-tutorials.html.html  interchain-security.html  interchain-security.html.html  modules.html  modules.html.html  resources.html  resources.html.html  telemetry.html  validators.html  validators.html.html
networks/: GENESIS-CEREMONY.md  GENESIS.md  Gopkg.toml  README.md  go.mod  main.go
pi-image/: gaia.json
programs/cw-ics08-wasm-eth/: Cargo.toml  README.md
programs/cw-ics08-wasm-eth/src/: contract.rs  custom_query.rs  error.rs  lib.rs  msg.rs  query.rs  state.rs  sudo.rs
programs/cw-ics08-wasm-eth/src/test/: mod.rs
programs/operator/: Cargo.toml
programs/operator/src/: lib.rs
programs/operator/src/cli/: command.rs  mod.rs
programs/operator/src/runners/: genesis.rs  mod.rs  operator.rs
programs/operator/src/runners/fixtures/: membership.rs  misbehaviour.rs  mod.rs  uc_and_mem.rs  update_client.rs
programs/relayer/: Cargo.toml  Dockerfile  README.md  build.rs  config.example.json
programs/relayer/proto/relayer/: relayer.proto
programs/relayer/src/: lib.rs
programs/relayer/src/cli/: cmd.rs  config.rs  mod.rs
programs/relayer/src/core/: builder.rs  mod.rs  modules.rs
programs/relayer/src/modules/: cosmos_to_cosmos.rs  cosmos_to_eth.rs  eth_to_cosmos.rs  mod.rs
programs/sp1-programs/membership/: Cargo.toml
programs/sp1-programs/membership/src/: lib.rs  main.rs
programs/sp1-programs/uc-and-membership/: Cargo.toml
programs/sp1-programs/uc-and-membership/src/: lib.rs  main.rs
programs/sp1-programs/update-client/: Cargo.toml
programs/sp1-programs/update-client/src/: lib.rs  main.rs
programs/sp1-programs/update-client/src/types/: validation.rs
proto/: README.md  buf.gen.doc.yaml  buf.gen.gogo.yaml  buf.gen.pulsar.yaml  buf.md  buf.yaml
rest_test/: helpers.go  helpers_test.go  (+1 more)
(+3346 files in other folders)
