[workspace]
members = [
    "packages/ethereum/ethereum-light-client",
    "packages/ethereum/ethereum-trie-db",
    "packages/ethereum/ethereum-types",
    "packages/ethereum/ethereum-apis",
    "packages/ethereum/tree_hash",
    "packages/solidity",
    "packages/relayer-lib",
    "packages/sp1-ics07-tendermint-prover",
    "packages/sp1-ics07-tendermint-utils",

    "programs/relayer",
    "programs/operator",
    "programs/sp1-programs/*",
    "programs/cw-ics08-wasm-eth"
]
resolver = "2"

[workspace.package]
version    = "0.1.0"
edition    = "2021"
license    = "MIT"
repository = "https://github.com/cosmos/solidity-ibc-eureka"
keywords   = ["cosmos", "ibc", "sp1", "tendermint", "ethereum", "bridge", "solidity", "eureka"]

[workspace.dependencies]
ibc-eureka-solidity-types          = { path = "packages/solidity", default-features = false }
ibc-eureka-relayer-lib             = { path = "packages/relayer-lib", default-features = false }
sp1-ics07-tendermint-prover        = { path = "packages/sp1-ics07-tendermint-prover", default-features = false }
sp1-ics07-tendermint-utils         = { path = "packages/sp1-ics07-tendermint-utils", default-features = false }
sp1-ics07-tendermint-update-client = { path = "programs/sp1-programs/update-client", default-features = false }
sp1-ics07-tendermint-membership    = { path = "programs/sp1-programs/membership", default-features = false }
ethereum-trie-db                   = { path = "packages/ethereum/ethereum-trie-db", default-features = false }
ethereum-light-client              = { path = "packages/ethereum/ethereum-light-client", default-features = false }
ethereum-types                     = { path = "packages/ethereum/ethereum-types", default-features = false }
ethereum-apis                      = { path = "packages/ethereum/ethereum-apis", default-features = false }
tree_hash                          = { path = "packages/ethereum/tree_hash", default-features = false }

serde           = { version = "1.0", default-features = false }
serde_json      = { version = "1.0", default-features = false }
serde_cbor      = { version = "0.11", default-features = false }
serde_with      = { version = "3.11", default-features = false }
hex             = { version = "0.4", default-features = false }
base64          = { version = "0.22", default-features = false }
prost           = { version = "0.13", default-features = false }
bincode         = { version = "1.3", default-features = false }
subtle-encoding = { version = "0.5", default-features = false }
schemars        = { version = "0.8", default-features = false }

sha2 = { version = "0.10", default-features = false }
sha3 = { version = "0.10", default-features = false }
rand = { version = "0.9", default-features = false }

tokio       = { version = "1.0", default-features = false }
tonic       = { version = "0.12", default-features = false }
tonic-build = { version = "0.12", default-features = false }

tracing            = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false }
anyhow             = { version = "1.0", default-features = false }
async-trait        = { version = "0.1", default-features = false }
futures            = { version = "0.3", default-features = false }
futures-timer      = { version = "3.0", default-features = false }
clap               = { version = "4.5", default-features = false, features = ["std"] } # std feature is required for clap
time               = { version = "0.3", default-features = false }
dotenv             = { version = "0.15", default-features = false }
thiserror          = { version = "2.0", default-features = false }
reqwest            = { version = "0.12", default-features = false }

tendermint                       = { version = "0.40", default-features = false }
tendermint-rpc                   = { version = "0.40", default-features = false }
tendermint-light-client-verifier = { version = "0.40", default-features = false }

cosmos-sdk-proto = { version = "0.26", default-features = false }
ibc-proto        = { version = "0.51", default-features = false }
ibc-proto-eureka = { package = "ibc-proto", git = "https://github.com/srdtrk/ibc-proto-rs", rev = "7074fb20c3a654e945e5ca46627c5a971d785e04", default-features = false }

ibc-primitives              = { version = "0.57", default-features = false }
ibc-client-tendermint       = { version = "0.57", default-features = false }
ibc-core-client             = { version = "0.57", default-features = false }
ibc-core-host-types         = { version = "0.57", default-features = false }
ibc-core-client-types       = { version = "0.57", default-features = false }
ibc-core-commitment-types   = { version = "0.57", default-features = false }
ibc-core-handler-types      = { version = "0.57", default-features = false }
ibc-client-tendermint-types = { version = "0.57", default-features = false }

alloy                  = { version = "0.11", default-features = false }
alloy-contract         = { version = "0.11", default-features = false }
alloy-sol-types        = { version = "0.8", default-features = false }
alloy-primitives       = { version = "0.8", default-features = false }
alloy-trie             = { version = "0.7", default-features = false }
alloy-serde            = { version = "0.11", default-features = false }
alloy-network          = { version = "0.11", default-features = false }
alloy-signer-local     = { version = "0.11", default-features = false }
alloy-rlp              = { version = "0.3", default-features = false }
alloy-provider         = { version = "0.11", default-features = false }
alloy-transport        = { version = "0.11", default-features = false }
alloy-rpc-types-eth    = { version = "0.11", default-features = false }

sp1-sdk    = { version = "4.1", default-features = false }
sp1-prover = { version = "4.1", default-features = false }
sp1-zkvm   = { version = "4.1", default-features = false }
sp1-helper = { version = "4.1", default-features = false }

cosmwasm-schema = { version = "2.2", default-features = false }
cosmwasm-std    = { version = "2.2", default-features = false }

# The dependencies below are maintained by Sigma Prime (for use in Lighthouse (and the broader Ethereum ecosystem))
ethereum_ssz        = { version = "0.8", default-features = false }
ethereum_ssz_derive = { version = "0.8", default-features = false }
tree_hash_derive    = { version = "0.9", default-features = false }

# The dependencies below are maintained by Parity Tech
trie-db            = { version = "0.29", default-features = false }
hash-db            = { version = "0.16", default-features = false }
memory-db          = { version = "0.32", default-features = false }
hash256-std-hasher = { version = "0.15", default-features = false }
rlp                = { version = "0.6", default-features = false }
rlp-derive         = { version = "0.2", default-features = false }
primitive-types    = { version = "0.13", default-features = false }

# test/dev-dependencies
milagro_bls   = { git = "https://github.com/Snowfork/milagro_bls", rev = "bc2b5b5e8d48b7e2e1bfaa56dc2d93e13cb32095", default-features = false } # Only used for testing, not to be used in production!
smallvec      = { version = "1.6.1", default-features = false }

[patch.crates-io]
sha2-v0-9-8         = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", branch = "patch-v0.9.9" }
sha2-v0-10-8        = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", branch = "patch-v0.10.8" }
ed25519-consensus   = { git = "https://github.com/sp1-patches/ed25519-consensus", branch = "patch-v2.1.0" }
ecdsa               = { git = "https://github.com/sp1-patches/signatures", branch = "patch-ecdsa-v0.16.9" }
curve25519-dalek-ng = { git = "https://github.com/sp1-patches/curve25519-dalek-ng", branch = "patch-v4.1.1" }
tiny-keccak         = { git = "https://github.com/sp1-patches/tiny-keccak", branch = "patch-v2.0.2" }
