[package]
name = "no-std-check"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]

ibc = { path = "../../modules", optional = true }
ibc-proto = { path = "../../proto", optional = true }

sp-core = { version = "3.0.0", default-features = false, optional = true }
sp-io = { version = "3.0.0", default-features = false, optional = true }
sp-runtime = { version = "3.0.0", default-features = false, optional = true }
sp-std = { version = "3.0.0", default-features = false, optional = true }

# Dependencies that support no_std
bytes = { version = "1.0.1", default-features = false }
chrono = { version = "0.4.19", default-features = false }
contracts = { version = "0.4.0", default-features = false }
crossbeam-channel = { version = "0.5.1", default-features = false }
ed25519 = { version = "1.2.0", default-features = false, features = ["serde"] }
ed25519-dalek = { version = "1.0.1", default-features = false, features = ["rand", "u64_backend"] }
flex-error = { version = "0.4.4", default-features = false }
futures = { version = "0.3.17", default-features = false }
impl-serde = { version = "0.3.1", default-features = false }
k256 = { version = "0.9", default-features = false, features = ["ecdsa"] }
num-derive = { version = "0.3", default-features = false }
num-traits = { version = "0.2", default-features = false }
once_cell = { version = "1.3", default-features = false }
prost = { version = "0.9", default-features = false }
prost-types = { version = "0.9", default-features = false }
ripemd160 = { version = "0.9", default-features = false }
ryu = { version = "1.0.5" }
serde = { version = "1.0", default-features = false }
serde_bytes = { version = "0.11.5", default-features = false }
serde_derive = { version = "1.0.130", default-features = false }
serde_json = { version = "1.0.65", default-features = false, features = ["alloc"] }
serde_repr = { version = "0.1.7", default-features = false }
serde_cbor = { version = "0.11.1", default-features = false, features = ["alloc"] }
serde-json-core = { version = "0.4.0", default-features = false, features = ["heapless"] }
sha2 = { version = "0.9.3", default-features = false }
signature = { version = "1.3.1", default-features = false }
static_assertions = { version = "1.1.0", default-features = false }
subtle = { version = "2.4.1", default-features = false }
subtle-encoding = { version = "0.5.1", default-features = false }
time = { version = "0.3.2", default-features = false, features = ["alloc", "serde"] }
tracing = { version = "0.1.26", default-features = false }
zeroize = { version = "1.1", features = ["zeroize_derive"] }
safe-regex = { version = "0.2.4" }

# Dependencies that do not support no_std
tonic = { version = "0.6", optional = true, default-features = false }
socket2 = { version = "0.4.1", optional = true, default-features = false }
getrandom = { version = "0.2.3", optional = true, default-features = false, features = ["js"] }
ics23 = { version = "0.6.6", optional = true, default-features = false }
thiserror = { version = "1.0.26", optional = true, default-features = false }
regex = { version = "1.5.4", optional = true, default-features = false }
sled = { version = "0.34.7", optional = true, default-features = false }
tokio = { version = "1.11.0", optional = true, default-features = false }
toml = { version = "0.5.8", optional = true, default-features = false }
url = { version = "2.2", optional = true, default-features = false, features = ["serde"] }

[features]
default = []
use-ibc = [
  "ibc",
  "ibc-proto",
]
use-substrate = [
  "sp-core",
  "sp-io",
  "sp-runtime",
  "sp-std",
]

use-unsupported = [
  "tonic",
  "socket2",
  "getrandom",
  "ics23",
  "thiserror",
  "regex",
  "sled",
  "tokio",
  "toml",
  "url",
]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
