[package]
name        = "sp1-ics07-tendermint-membership"
description = "Verify (non)membership program for sp1-ics07-tendermint"
version     = { workspace = true }
edition     = { workspace = true }
repository  = { workspace = true }
license     = { workspace = true }

[[bin]]
name = "sp1-ics07-tendermint-membership"
test = false

[dependencies]
sp1-zkvm                      = { workspace = true, default-features = true }
ibc-core-commitment-types     = { workspace = true }
alloy-sol-types               = { workspace = true }
ibc-eureka-solidity-types     = { workspace = true }
ibc-proto                     = { workspace = true }
