[package]
name        = "sp1-ics07-tendermint-update-client"
description = "Update client program for sp1-ics07-tendermint"
version     = { workspace = true }
edition     = { workspace = true }
repository  = { workspace = true }
license     = { workspace = true }

[[bin]]
name = "sp1-ics07-tendermint-update-client"
test = false

[dependencies]
sp1-zkvm                         = { workspace = true, default-features = true }
ibc-eureka-solidity-types        = { workspace = true }
tendermint-light-client-verifier = { workspace = true }
ibc-client-tendermint            = { workspace = true, features = ["serde"] }
ibc-core-host-types              = { workspace = true }
ibc-core-client                  = { workspace = true }
ibc-primitives                   = { workspace = true }
ibc-proto                        = { workspace = true }
sha2                             = { workspace = true }
alloy-sol-types                  = { workspace = true }
